--- a/index.html
+++ b/index.html
@@ -224,11 +224,36 @@
     opacity: 1;
 }
         /* अलग-अलग स्लाइड के लिए डिज़ाइन */
-        .slide-1 { background: linear-gradient(to right, #6366f1, #8b5cf6); border: 2px solid #8b5cf6; } /* Indigo-Violet Gradient */
-        .slide-2 { background: linear-gradient(to right, #10b981, #34d399); border: 2px solid #34d399; } /* Green Gradient */
-        .slide-3 { background: linear-gradient(to right, #f97316, #fb923c); border: 2px solid #fb923c; } /* Orange Gradient */
-        .slide-4 { background: linear-gradient(to right, #ef4444, #f87171); border: 2px solid #f87171; } /* Red Gradient */
-        .slide-5 { background: linear-gradient(to right, #06b6d4, #22d3ee); border: 2px solid #22d3ee; } /* Cyan Gradient */
+       .slide-1  { background: linear-gradient(to right, #6366f1, #8b5cf6); border: 2px solid #8b5cf6; } /* Indigo-Violet */
+.slide-2  { background: linear-gradient(to right, #10b981, #34d399); border: 2px solid #34d399; } /* Green */
+.slide-3  { background: linear-gradient(to right, #f97316, #fb923c); border: 2px solid #fb923c; } /* Orange */
+.slide-4  { background: linear-gradient(to right, #ef4444, #f87171); border: 2px solid #f87171; } /* Red */
+.slide-5  { background: linear-gradient(to right, #06b6d4, #22d3ee); border: 2px solid #22d3ee; } /* Cyan */
+
+.slide-6  { background: linear-gradient(to right, #2563eb, #1d4ed8); border: 2px solid #1d4ed8; } /* Blue */
+.slide-7  { background: linear-gradient(to right, #d97706, #f59e0b); border: 2px solid #f59e0b; } /* Amber */
+.slide-8  { background: linear-gradient(to right, #14b8a6, #2dd4bf); border: 2px solid #2dd4bf; } /* Teal */
+.slide-9  { background: linear-gradient(to right, #be185d, #ec4899); border: 2px solid #ec4899; } /* Pink */
+.slide-10 { background: linear-gradient(to right, #059669, #10b981); border: 2px solid #10b981; } /* Emerald */
+
+.slide-11 { background: linear-gradient(to right, #7c3aed, #a78bfa); border: 2px solid #a78bfa; } /* Purple */
+.slide-12 { background: linear-gradient(to right, #dc2626, #ef4444); border: 2px solid #ef4444; } /* Crimson */
+.slide-13 { background: linear-gradient(to right, #4b5563, #6b7280); border: 2px solid #6b7280; } /* Cool Gray */
+.slide-14 { background: linear-gradient(to right, #0f766e, #0d9488); border: 2px solid #0d9488; } /* Dark Teal */
+.slide-15 { background: linear-gradient(to right, #9d174d, #db2777); border: 2px solid #db2777; } /* Rose */
+
+.slide-16 { background: linear-gradient(to right, #b91c1c, #e11d48); border: 2px solid #e11d48; } /* Deep Red */
+.slide-17 { background: linear-gradient(to right, #1e3a8a, #3b82f6); border: 2px solid #3b82f6; } /* Royal Blue */
+.slide-18 { background: linear-gradient(to right, #475569, #64748b); border: 2px solid #64748b; } /* Slate */
+.slide-19 { background: linear-gradient(to right, #7f1d1d, #ef4444); border: 2px solid #ef4444; } /* Blood Red */
+.slide-20 { background: linear-gradient(to right, #2e1065, #7c3aed); border: 2px solid #7c3aed; } /* Deep Violet */
+
+.slide-21 { background: linear-gradient(to right, #064e3b, #10b981); border: 2px solid #10b981; } /* Jungle Green */
+.slide-22 { background: linear-gradient(to right, #78350f, #d97706); border: 2px solid #d97706; } /* Bronze */
+.slide-23 { background: linear-gradient(to right, #9333ea, #c084fc); border: 2px solid #c084fc; } /* Orchid */
+.slide-24 { background: linear-gradient(to right, #991b1b, #f43f5e); border: 2px solid #f43f5e; } /* Candy Red */
+.slide-25 { background: linear-gradient(to right, #0c4a6e, #0284c7); border: 2px solid #0284c7; } /* Ocean Blue */
+
         
         /* Mobile Bottom Nav CSS */
         .bottom-nav {
