--- a/terms-&-conditions.html
+++ b/terms-&-conditions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy & Disclaimer - Govt Exam Guide</title>
+  <title>Privacy Policy, Disclaimer & Description - Crapd.in</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -79,40 +79,95 @@
   }
 </style>
 
-  <h1>Privacy Policy & Disclaimer</h1>
+  <h1>Privacy Policy, Disclaimer & Full Description</h1>
 
-  <p><strong>Govt Exam Guide</strong> is an independent educational app created for informational purposes only. 
-  We provide guidance on how different government exams are conducted and by which authority. 
-  We do not conduct any exams, nor are we affiliated with any government body.</p>
+  <h2>About Crapd.in - Your True Guide</h2>
+  <p><strong>Crapd.in - Your True Guide</strong> is an educational app designed to assist users with government jobs, private sector jobs, and AI-based career guidance. This app provides comprehensive information on job opportunities, exam guidelines, video lectures, and multilingual educational notes (in Hindi, English, and Punjabi), helping users in their preparation for various exams and career opportunities.</p>
 
-  <h2>Data Sources</h2>
-  <p>All information in this app is collected from the official websites of respective government exam authorities. 
-  Users are strongly advised to always visit the official websites for application, notifications, and updates.</p>
+  <p>Our primary goal is to provide users with educational content and career guidance. This app is not affiliated with any government body, and its purpose is solely to provide information about government, private, and AI-based career opportunities.</p>
 
+  <h2>App Description</h2>
+  <p>Crapd.in - Your True Guide offers users a one-stop solution for preparing for government and private sector exams, as well as guidance for AI and emerging career opportunities. The app covers:</p>
   <ul>
-    <li><strong>UPSC</strong> – <a href="https://upsc.gov.in" target="_blank">https://upsc.gov.in</a></li>
-    <li><strong>SSC</strong> – <a href="https://ssc.nic.in" target="_blank">https://ssc.nic.in</a></li>
-    <li><strong>IBPS</strong> – <a href="https://ibps.in" target="_blank">https://ibps.in</a></li>
-    <li><strong>RBI</strong> – <a href="https://rbi.org.in" target="_blank">https://rbi.org.in</a></li>
-    <li><strong>UPPSC</strong> – <a href="https://uppsc.up.nic.in" target="_blank">https://uppsc.up.nic.in</a></li>
-    <li><strong>BPSC</strong> – <a href="https://bpsc.bih.nic.in" target="_blank">https://bpsc.bih.nic.in</a></li>
-    <li><strong>RPSC</strong> – <a href="https://rpsc.rajasthan.gov.in" target="_blank">https://rpsc.rajasthan.gov.in</a></li>
-    <li><strong>MPPSC</strong> – <a href="https://mppsc.mp.gov.in" target="_blank">https://mppsc.mp.gov.in</a></li>
-    <li>Other State PSCs – Available on respective official websites.</li>
+    <li><strong>Government Jobs Information:</strong> Get details on government job exams, eligibility, and application processes.</li>
+    <li><strong>Private Sector Jobs:</strong> Access guidance for private sector career options.</li>
+    <li><strong>AI Career Guidance:</strong> Learn about career opportunities in Artificial Intelligence, Data Science, and related fields.</li>
+    <li><strong>Multilingual Notes:</strong> Study materials available in Hindi, English, and Punjabi.</li>
+    <li><strong>Video Lectures:</strong> Visual content for exam preparation across various fields.</li>
+    <li><strong>Direct Support:</strong> Contact support directly through WhatsApp or phone for assistance.</li>
   </ul>
 
-  <h2>Charges</h2>
-  <p>We charge a nominal fee of <strong>₹77</strong> from users. This fee is only for providing 
-  consolidated exam guidance, information, and app services. It is <strong>not related to any government exam fee or application fee</strong>.</p>
+  <h2>Important Disclaimer</h2>
+  <p>This app is not affiliated with any government agency. While the app provides information related to government jobs, private sector opportunities, and AI careers, it does not represent or is not endorsed by any government organization.</p>
 
-  <h2>User Responsibility</h2>
+  <p>All information is sourced from public domain sources such as government websites and educational content providers. Users are encouraged to verify any information provided by checking the official websites listed below.</p>
+
+  <h2>Official Government Websites Links for Verified Information</h2>
   <ul>
-    <li>Always check official websites for application forms, admit cards, and notifications.</li>
-    <li>Govt Exam Guide is only an educational guide, not an exam conducting authority.</li>
+    <li><strong>UPSC - Union Public Service Commission:</strong> <a href="https://www.upsc.gov.in" target="_blank">https://www.upsc.gov.in</a></li>
+    <li><strong>SSC - Staff Selection Commission:</strong> <a href="https://ssc.nic.in" target="_blank">https://ssc.nic.in</a></li>
+    <li><strong>RRB - Railway Recruitment Board:</strong> <a href="https://www.rrbcdg.gov.in" target="_blank">https://www.rrbcdg.gov.in</a></li>
+    <li><strong>India Post - India Post GDS:</strong> <a href="https://www.indiapost.gov.in" target="_blank">https://www.indiapost.gov.in</a></li>
+    <li><strong>IBPS - Institute of Banking Personnel Selection:</strong> <a href="https://www.ibps.in" target="_blank">https://www.ibps.in</a></li>
+    <li><strong>Indian Army - Official Website:</strong> <a href="https://joinindianarmy.nic.in" target="_blank">https://joinindianarmy.nic.in</a></li>
+    <li><strong>Indian Navy - Official Website:</strong> <a href="https://www.joinindiannavy.gov.in" target="_blank">https://www.joinindiannavy.gov.in</a></li>
+    <li><strong>Indian Air Force - Official Website:</strong> <a href="https://indianairforce.nic.in" target="_blank">https://indianairforce.nic.in</a></li>
+    <li><strong>NDA - National Defence Academy:</strong> <a href="https://www.joinnda.nic.in" target="_blank">https://www.joinnda.nic.in</a></li>
+    <li><strong>Employment News:</strong> <a href="http://www.employmentnews.gov.in" target="_blank">http://www.employmentnews.gov.in</a></li>
   </ul>
+
+  <h2>State-wise Public Service Commissions (PSC) Websites</h2>
+  <ul>
+    <li>Andhra Pradesh Public Service Commission (APPSC): <a href="https://psc.ap.gov.in" target="_blank">https://psc.ap.gov.in</a></li>
+    <li>Arunachal Pradesh Public Service Commission (APPSC): <a href="http://appsc.gov.in" target="_blank">http://appsc.gov.in</a></li>
+    <li>Assam Public Service Commission (APSC): <a href="http://www.apsc.nic.in" target="_blank">http://www.apsc.nic.in</a></li>
+    <li>Bihar Public Service Commission (BPSC): <a href="http://www.bpsc.bih.nic.in" target="_blank">http://www.bpsc.bih.nic.in</a></li>
+    <li>Chhattisgarh Public Service Commission (CGPSC): <a href="http://www.psc.cg.gov.in" target="_blank">http://www.psc.cg.gov.in</a></li>
+    <li>Goa Public Service Commission (GPSC): <a href="https://gpsc.goa.gov.in" target="_blank">https://gpsc.goa.gov.in</a></li>
+    <li>Gujarat Public Service Commission (GPSC): <a href="https://gpsc.gujarat.gov.in" target="_blank">https://gpsc.gujarat.gov.in</a></li>
+    <li>Haryana Public Service Commission (HPSC): <a href="http://hpsc.gov.in" target="_blank">http://hpsc.gov.in</a></li>
+    <li>Himachal Pradesh Public Service Commission (HPPSC): <a href="http://www.hppsc.hp.gov.in" target="_blank">http://www.hppsc.hp.gov.in</a></li>
+    <li>Jharkhand Public Service Commission (JPSC): <a href="http://www.jpsc.gov.in" target="_blank">http://www.jpsc.gov.in</a></li>
+    <li>Karnataka Public Service Commission (KPSC): <a href="http://kpsc.kar.nic.in" target="_blank">http://kpsc.kar.nic.in</a></li>
+    <li>Kerala Public Service Commission (KPSC): <a href="https://www.kpsecirculars.kerala.gov.in" target="_blank">https://www.kpsecirculars.kerala.gov.in</a></li>
+    <li>Madhya Pradesh Public Service Commission (MPPSC): <a href="http://www.mppsc.nic.in" target="_blank">http://www.mppsc.nic.in</a></li>
+    <li>Maharashtra Public Service Commission (MPSC): <a href="http://www.mpsc.gov.in" target="_blank">http://www.mpsc.gov.in</a></li>
+    <li>Manipur Public Service Commission (MPSC): <a href="http://mpsconline.gov.in" target="_blank">http://mpsconline.gov.in</a></li>
+    <li>Meghalaya Public Service Commission (MPSC): <a href="http://mpscs.gov.in" target="_blank">http://mpscs.gov.in</a></li>
+    <li>Mizoram Public Service Commission (MPSC): <a href="https://www.mpsc.mizoram.gov.in" target="_blank">https://www.mpsc.mizoram.gov.in</a></li>
+    <li>Nagaland Public Service Commission (NPSC): <a href="https://npsc.co.in" target="_blank">https://npsc.co.in</a></li>
+    <li>Odisha Public Service Commission (OPSC): <a href="http://www.opsc.gov.in" target="_blank">http://www.opsc.gov.in</a></li>
+    <li>Punjab Public Service Commission (PPSC): <a href="http://www.ppsc.gov.in" target="_blank">http://www.ppsc.gov.in</a></li>
+    <li>Rajasthan Public Service Commission (RPSC): <a href="http://rpsc.rajasthan.gov.in" target="_blank">http://rpsc.rajasthan.gov.in</a></li>
+    <li>Sikkim Public Service Commission (SPSC): <a href="http://www.spscskm.gov.in" target="_blank">http://www.spscskm.gov.in</a></li>
+    <li>Tamil Nadu Public Service Commission (TNPSC): <a href="https://www.tnpsc.gov.in" target="_blank">https://www.tnpsc.gov.in</a></li>
+    <li>Telangana State Public Service Commission (TSPSC): <a href="https://www.tspsc.gov.in" target="_blank">https://www.tspsc.gov.in</a></li>
+    <li>Tripura Public Service Commission (TPSC): <a href="http://www.tpsc.gov.in" target="_blank">http://www.tpsc.gov.in</a></li>
+    <li>Uttar Pradesh Public Service Commission (UPPSC): <a href="http://uppsc.up.nic.in" target="_blank">http://uppsc.up.nic.in</a></li>
+    <li>Uttarakhand Public Service Commission (UKPSC): <a href="http://ukpsc.gov.in" target="_blank">http://ukpsc.gov.in</a></li>
+    <li>West Bengal Public Service Commission (WBPSC): <a href="http://www.pscwbonline.gov.in" target="_blank">http://www.pscwbonline.gov.in</a></li>
+  </ul>
+
+  <h2>Important Notes</h2>
+  <ul>
+    <li>This app provides educational content and career guidance, and aims to help users with preparation for government job exams, private sector opportunities, and AI-related careers.</li>
+    <li>Users should verify any government-related information provided by visiting official government websites listed above.</li>
+    <li>Crapd.in - Your True Guide is not an official government entity and does not represent any government organization.</li>
+  </ul>
+
+  <h2>Why Choose Crapd.in - Your True Guide?</h2>
+  <ul>
+    <li><strong>Comprehensive Career Guidance:</strong> Information on both government and private sector jobs.</li>
+    <li><strong>AI Career Opportunities:</strong> Stay updated with the latest trends and opportunities in AI and Data Science.</li>
+    <li><strong>Multilingual Support:</strong> Available in Hindi, English, and Punjabi.</li>
+    <li><strong>Video Lectures:</strong> Study at your own pace with dedicated content.</li>
+    <li><strong>Direct Assistance:</strong> Reach out to our team via WhatsApp or phone.</li>
+  </ul>
+
+  <h2>Privacy Note</h2>
+  <p>If you are collecting any personal data, please ensure your Privacy Policy reflects how user data is collected and used.</p>
 
   <h2>Contact Us</h2>
-  <p>If you have any questions regarding this policy, you can contact us:</p>
   <p>
     📧 Email: crapdindia@gmail.com <br>
     🌐 Website: <a href="https://crapd.in" target="_blank">https://crapd.in</a>
