--- a/index.html
+++ b/index.html
@@ -1100,8 +1100,8 @@
             <h3 class="text-3xl font-bold mb-4">भारतीय सेना भर्ती</h3>
             <div class="modal-list">
           <ul>
-  <li><a href="nda.html">NDA — National Defence Academy (UPSC)</a></li>
-  <li><a href="cds.html">CDS — Combined Defence Services (UPSC)</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">NDA — National Defence Academy (UPSC)</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">CDS — Combined Defence Services (UPSC)</a></li>
   <li><a href="tgc.html">TGC — Technical Graduate Course (Engineering Graduates)</a></li>
   <li><a href="ues.html">UES — University Entry Scheme</a></li>
   <li><a href="jag.html">JAG Entry — Judge Advocate General (Law Graduates)</a></li>
