--- a/index.html
+++ b/index.html
@@ -107,39 +107,41 @@
             }
         }
         
-        /* Mobile Responsive Card Styles */
-        @media (max-width: 800px) {
-            .card {
-                padding: 1rem; /* Smaller padding */
-                border: 1px solid var(--golden-dark);
-                transform: none !important;
-                height: 140px; /* मोबाइल के लिए निश्चित ऊँचाई */
-            }
-            .card-content {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-            .card-icon {
-                font-size: 2rem; /* Smaller icon size */
-                margin-bottom: 0.5rem;
-            }
-            .card-heading {
-                font-size: 1rem; /* Smaller heading size */
-                font-weight: 700;
-                color: var(--brown-dark);
-                text-shadow: none;
-                margin-bottom: 0.25rem;
-            }
-            .card-sub-heading {
-                font-size: 0.75rem; /* Smaller sub-heading size */
-                color: var(--brown-dark);
-            }
-            .grid-cols-mobile-3 {
-                grid-template-columns: repeat(3, minmax(0, 1fr));
-            }
-        }
+       @media (max-width: 800px) {
+    .grid-cols-mobile-2 {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 1rem;
+    }
+
+    .card {
+        padding: 1rem;
+        border: 1px solid var(--golden-dark);
+        transform: none !important;
+        height: 140px;
+    }
+    .card-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    .card-icon {
+        font-size: 2rem;
+        margin-bottom: 0.5rem;
+    }
+    .card-heading {
+        font-size: 1rem;
+        font-weight: 700;
+        color: var(--brown-dark);
+        margin-bottom: 0.25rem;
+    }
+    .card-sub-heading {
+        font-size: 0.75rem;
+        color: var(--brown-dark);
+    }
+}
         
         /* --- Modal (Popup) Design --- */
         .modal-overlay {
