--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your-True-All-In-One-Guide</title>
-    <script src="https://www.crapd.in/js/offline-check.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -107,41 +106,39 @@
             }
         }
         
-       @media (max-width: 800px) {
-    .grid-cols-mobile-2 {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        gap: 1rem;
-    }
-
-    .card {
-        padding: 1rem;
-        border: 1px solid var(--golden-dark);
-        transform: none !important;
-        height: 140px;
-    }
-    .card-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-    }
-    .card-icon {
-        font-size: 2rem;
-        margin-bottom: 0.5rem;
-    }
-    .card-heading {
-        font-size: 1rem;
-        font-weight: 700;
-        color: var(--brown-dark);
-        margin-bottom: 0.25rem;
-    }
-    .card-sub-heading {
-        font-size: 0.75rem;
-        color: var(--brown-dark);
-    }
-}
+        /* Mobile Responsive Card Styles */
+        @media (max-width: 800px) {
+            .card {
+                padding: 1rem; /* Smaller padding */
+                border: 1px solid var(--golden-dark);
+                transform: none !important;
+                height: 130px; /* मोबाइल के लिए निश्चित ऊँचाई */
+            }
+            .card-content {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            .card-icon {
+                font-size: 2rem; /* Smaller icon size */
+                margin-bottom: 0.5rem;
+            }
+            .card-heading {
+                font-size: 1rem; /* Smaller heading size */
+                font-weight: 700;
+                color: var(--brown-dark);
+                text-shadow: none;
+                margin-bottom: 0.25rem;
+            }
+            .card-sub-heading {
+                font-size: 0.75rem; /* Smaller sub-heading size */
+                color: var(--brown-dark);
+            }
+            .grid-cols-mobile-3 {
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+            }
+        }
         
         /* --- Modal (Popup) Design --- */
         .modal-overlay {
@@ -456,7 +453,7 @@
                 <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-Govt-Exam-Full-Guide</h2>
             </div>
             <!-- Updated Grid Classes for PC (3 cards per row) -->
-            <div class="grid grid-cols-1 grid-cols-mobile-3 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6">
+            <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6">
                 <div class="card" data-modal-target="upscModal" data-keywords="upsc संघ लोक सेवा आयोग civil services ese cse ifos nda cds capf">
                     <div class="card-content">
                         <div class="card-icon">🏛️</div>
@@ -625,7 +622,7 @@
             <div class="text-center mb-6">
                 <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-A.I- Tools Full Guide</h2>
             </div>
-            <div class="grid grid-cols-1 grid-cols-mobile-3 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6">
+            <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6">
                 <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5">
                     <div class="card-content">
                         <div class="card-icon">🤖</div>
@@ -703,131 +700,131 @@
             <div class="text-center mb-6">
                 <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-Private-Jobs-Full-Guide</h2>
             </div>
-            <div class="grid grid-cols-1 grid-cols-mobile-3 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6">
+            <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6">
                 <div class="card" data-modal-target="itSoftwareModal" data-keywords="it software jobs software engineer web developer app developer data scientist analyst ai ml engineer cybersecurity cloud engineer ui ux designer tech support engineer">
                     <div class="card-content">
                         <div class="card-icon">👨‍💻</div>
                         <h2 class="card-heading">IT और Software Jobs</h2>
-                        <p class="card-sub-heading">Software Engineer / Web Developer</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="salesMarketingModal" data-keywords="sales marketing jobs sales executive manager digital marketing specialist seo sem analyst social media brand manager content marketing executive product marketing manager">
                     <div class="card-content">
                         <div class="card-icon">📈</div>
                         <h2 class="card-heading">Sales और Marketing</h2>
-                        <p class="card-sub-heading">Digital Marketing / Sales Manager</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="financeAccountingModal" data-keywords="finance accounting jobs accountant financial analyst chartered accountant ca investment banker audit executive payroll manager tax consultant">
                     <div class="card-content">
                         <div class="card-icon">💰</div>
                         <h2 class="card-heading">Finance और Accounting</h2>
-                        <p class="card-sub-heading">Financial Analyst / CA</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="hrJobsModal" data-keywords="human resource hr jobs hr executive talent acquisition specialist hr manager training and development officer payroll and compliance officer employee relations manager">
                     <div class="card-content">
                         <div class="card-icon">🧑‍💼</div>
                         <h2 class="card-heading">Human Resource (HR) Jobs</h2>
-                        <p class="card-sub-heading">HR Executive / Manager</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="customerSupportModal" data-keywords="customer support bpo kpo customer care executive technical support chat process executive voice process agent team leader process trainer">
                     <div class="card-content">
                         <div class="card-icon">📞</div>
                         <h2 class="card-heading">Customer Support / BPO / KPO</h2>
-                        <p class="card-sub-heading">Customer Care Executive / Team Leader</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="bankingInsuranceModal" data-keywords="banking insurance sector jobs relationship manager loan officer credit analyst branch manager insurance advisor underwriter">
                     <div class="card-content">
                         <div class="card-icon">🏦</div>
                         <h2 class="card-heading">Banking और Insurance</h2>
-                        <p class="card-sub-heading">Relationship Manager / Loan Officer</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="healthcarePharmaModal" data-keywords="healthcare pharma medical jobs medical representative mr lab technician pharmacist nurse doctor clinical research associate healthcare admin">
                     <div class="card-content">
                         <div class="card-icon">⚕️</div>
                         <h2 class="card-heading">Healthcare / Pharma / Medical</h2>
-                        <p class="card-sub-heading">Pharmacist / Lab Technician</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="educationTrainingModal" data-keywords="education training jobs private school teacher online tutor corporate trainer admission counselor education consultant e-learning content developer">
                     <div class="card-content">
                         <div class="card-icon">🧑‍🏫</div>
                         <h2 class="card-heading">Education और Training</h2>
-                        <p class="card-sub-heading">Teacher / Tutor</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="engineeringSectorModal" data-keywords="engineering sector jobs mechanical engineer civil engineer electrical engineer design engineer cad production manufacturing engineer site engineer">
                     <div class="card-content">
                         <div class="card-icon">⚙️</div>
                         <h2 class="card-heading">Engineering Sector</h2>
-                        <p class="card-sub-heading">Mechanical / Civil / Electrical Engineer</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="manufacturingProductionModal" data-keywords="manufacturing production jobs machine operator plant supervisor quality control executive production manager maintenance technician">
                     <div class="card-content">
                         <div class="card-icon">🏭</div>
                         <h2 class="card-heading">Manufacturing & Production</h2>
-                        <p class="card-sub-heading">Plant Supervisor / Technician</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="logisticsSupplyChainModal" data-keywords="logistics supply chain jobs logistics executive warehouse manager inventory controller procurement specialist supply chain analyst fleet manager">
                     <div class="card-content">
                         <div class="card-icon">🚚</div>
                         <h2 class="card-heading">Logistics और Supply Chain</h2>
-                        <p class="card-sub-heading">Warehouse Manager / Analyst</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="realEstateModal" data-keywords="real estate construction jobs sales executive site supervisor civil engineer architect property advisor interior designer">
                     <div class="card-content">
                         <div class="card-icon">🏡</div>
                         <h2 class="card-heading">Real Estate और Construction</h2>
-                        <p class="card-sub-heading">Site Supervisor / Architect</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="retailEcommerceModal" data-keywords="retail e-commerce jobs store manager cashier billing executive visual merchandiser inventory customer relationship executive delivery executive">
                     <div class="card-content">
                         <div class="card-icon">🛍️</div>
                         <h2 class="card-heading">Retail / E-commerce Jobs</h2>
-                        <p class="card-sub-heading">Store Manager / Delivery Executive</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="mediaEntertainmentModal" data-keywords="media advertising entertainment jobs content writer copywriter graphic designer video editor creative director journalist photographer cinematographer pr executive">
                     <div class="card-content">
                         <div class="card-icon">🎬</div>
                         <h2 class="card-heading">Media / Advertising / Entertainment</h2>
-                        <p class="card-sub-heading">Content Writer / Graphic Designer</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="legalLawModal" data-keywords="legal law jobs legal advisor corporate lawyer contract manager legal associate compliance officer">
                     <div class="card-content">
                         <div class="card-icon">⚖️</div>
                         <h2 class="card-heading">Legal / Law Jobs</h2>
-                        <p class="card-sub-heading">Legal Advisor / Corporate Lawyer</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="hospitalityTravelModal" data-keywords="hospitality travel tourism jobs hotel manager front office executive travel agent chef cook housekeeping supervisor tour guide event manager">
                     <div class="card-content">
                         <div class="card-icon">🏨</div>
                         <h2 class="card-heading">Hospitality / Travel / Tourism</h2>
-                        <p class="card-sub-heading">Hotel Manager / Travel Agent</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="securityServicesModal" data-keywords="security services jobs private security guard cctv operator security supervisor bouncer">
                     <div class="card-content">
                         <div class="card-icon">🛡️</div>
                         <h2 class="card-heading">Security Services</h2>
-                        <p class="card-sub-heading">Security Guard / CCTV Operator</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
                 <div class="card" data-modal-target="drivingDeliveryModal" data-keywords="driving delivery field jobs cab driver ola uber delivery executive zomato swiggy field sales executive service technician ac fridge">
                     <div class="card-content">
                         <div class="card-icon">🚗</div>
                         <h2 class="card-heading">Driving / Delivery / Field Jobs</h2>
-                        <p class="card-sub-heading">Delivery Executive / Cab Driver</p>
+                        <p class="card-sub-heading"></p>
                     </div>
                 </div>
             </div>
@@ -897,7 +894,6 @@
                 <ul>
  <h3> UPSC CSE – Railway Services </h3>
   <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Indian Railway Traffic Service (IRTS) — UPSC CSE</a></li>
-  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Indian Railway Accounts Service (IRAS) — UPSC CSE</a></li>
   <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">Section Officer — Accounts / Personnel / Stores (Promotion)</a></li>
 </ul>
 
@@ -2521,7 +2517,7 @@
     text: "Admit कार्ड उपलब्ध: 30 सित॰ 2025 | परीक्षा: 5 अक्टूबर 2025",
     link: "https://www.chdeducation.gov.in/",
     colorClass: "slide-7",
-    deadline: "2025-09-30"
+    deadline: "2025-10-05"
   }
                 ];
             }
