--- a/index.html
+++ b/index.html
@@ -2262,7 +2262,7 @@
                 <div id="progress-1" class="progress-fill"></div>
             </div>
             <h2 class="text-3xl font-bold text-center mb-6 golden-text-gradient-custom">
-                Enter Information
+                Register Right Know
             </h2>
             <form id="form-step-1" class="space-y-4">
                 <div>
