--- a/index.html
+++ b/index.html
@@ -1298,14 +1298,16 @@
             <h3 class="text-3xl font-bold mb-4">भारतीय नौसेना भर्ती</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="nda-navy.html">NDA — National Defence Academy (Navy Wing)</a></li>
-  <li><a href="cds-navy.html">CDS — Combined Defence Services (Navy)</a></li>
-  <li><a href="inet.html">INET — Indian Navy Entrance Test (Direct Officer Entry)</a></li>
-  <li><a href="10plus2-btech.html">10+2 (B.Tech) Cadet Entry Scheme</a></li>
-  <li><a href="ssb-navy.html">SSB Interview — Naval Selection Board</a></li>
-  <li><a href="jag-navy.html">JAG Entry — Judge Advocate General (Law Officers)</a></li>
-  <li><a href="ncc-special-navy.html">NCC Special Entry (Naval Wing)</a></li>
-  <li><a href="ssr-officer.html">SSC Officer Entries (Executive, Technical, Education Branch)</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">NDA — National Defence Academy (UPSC)</a></li>
+  <li><a href="upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html">CDS — Combined Defence Services (UPSC)</a></li>
+  <li><a href="tgc.html">TGC — Technical Graduate Course (Engineering Graduates)</a></li>
+  <li><a href="ues.html">UES — University Entry Scheme</a></li>
+  <li><a href="jag.html">JAG Entry — Judge Advocate General (Law Graduates)</a></li>
+  <li><a href="ncc-special-entry.html">NCC Special Entry (C Certificate Holders)</a></li>
+  <li><a href="ssc-tech.html">SSC (Tech) — Short Service Commission Technical</a></li>
+  <li><a href="afmc.html">AFMC — Armed Forces Medical College Entry (Doctors)</a></li>
+  <li><a href="amc-officers.html">Army Medical Corps Officers (Specialist Doctors)</a></li>
+  <li><a href="mns-officers.html">MNS — Military Nursing Service (Officers)</a></li>
 </ul>
 
 <h3>Sailor / Agniveer Recruitment</h3>
