--- a/index.html
+++ b/index.html
@@ -1262,10 +1262,10 @@
 <h3>Other Ranks (Soldier) Recruitment</h3>
 <ul>
   <li><a href="soldier-gd.html">Soldier GD — General Duty (All Arms)</a></li>
-  <li><a href="soldier-technical.html">Soldier Technical</a></li>
-  <li><a href="soldier-clerk.html">Soldier Clerk / Store Keeper Technical (SKT)</a></li>
-  <li><a href="soldier-nursing.html">Soldier Nursing Assistant / Nursing Assistant Veterinary</a></li>
-  <li><a href="soldier-tradesman.html">Soldier Tradesman (All Arms)</a></li>
+  <li><a href="soldier-gd.html">Soldier Technical</a></li>
+  <li><a href="soldier-gd.html">Soldier Clerk / Store Keeper Technical (SKT)</a></li>
+  <li><a href="soldier-gd.html">Soldier Nursing Assistant / Nursing Assistant Veterinary</a></li>
+  <li><a href="soldier-gd.html">Soldier Tradesman (All Arms)</a></li>
 </ul>
 
 <h3>Agniveer Recruitment (Army)</h3>
