--- a/index.html
+++ b/index.html
@@ -1312,10 +1312,10 @@
 
 <h3>Sailor / Agniveer Recruitment</h3>
 <ul>
-  <li><a href="agniveer-ssr.html">Agniveer (SSR) — Senior Secondary Recruit</a></li>
-  <li><a href="agniveer-mr.html">Agniveer (MR) — Matric Recruit</a></li>
-  <li><a href="navy-musician.html">Navy Musician Entry</a></li>
-  <li><a href="navy-artificer-apprentice.html">Artificer Apprentice (AA)</a></li>
+  <li><a href="agniveer-sailor.html">Agniveer (SSR) — Senior Secondary Recruit</a></li>
+  <li><a href="agniveer-sailor.html">Agniveer (MR) — Matric Recruit</a></li>
+  <li><a href="agniveer-sailor.html">Navy Musician Entry</a></li>
+  <li><a href="agniveer-sailor.html">Artificer Apprentice (AA)</a></li>
 </ul>
 
 <h3>Special Entries</h3>
